better for for bug#4767